# PGM-energy-calibration

./: .gitignore  CalibrationProcedure.md  GUI_ReadMe.md  LICENSE  N2_Fit.md  PGM-calibration.py  PGM_calibration.py  README.md  ReadMe.md  ToDo.md  create_data.py  example_PGMCalibration.py  example_PGMCalibration_PO4_data.py  example_PGMCalibration_UE112_2016.py  nitrogen_fit.py  nitrogen_plot.py  pyproject.toml  requirements.txt  test-PGMCalibration.py  test-PGMCalibration_jens_data.py  test-energy_back_and_forth.py  test_n2_fit.py
Results/: 2024_05_24_1344_UE112_fit_results.csv  2024_05_24_1344_UE112_input_data.csv
calibration_data_emile/Calibration Data/U1252-PGM1/: 20210518.txt  20240412.txt  20240423.txt  20240425.txt
calibration_data_emile/Calibration Data/UE112-PGM2/: 20120410.txt  20130222.txt
config/: config.json
examples/: example_PGMCalibration.py  example_PGMCalibration_PO4_data.py  example_PGMCalibration_UE112_2013.py  example_PGMCalibration_UE112_2016.py  example_energy_back_and_forth.py  example_n2_fit.py
examples/data/Results/ExampleN2Fit/: N2_fit_results.csv
examples/data/calibration_data_emile/Calibration Data/UE112-PGM2/: 20160929.txt
examples/data/gui_data/: ue112_2016.csv
scripts/: README  bootstrap.sh
src/: PGM_calibration.py  __init__.py  gui.py  nitrogen_fit.py
src/pgm_energy_calibration/: create_data.py  gui.py
src/pgm_energy_calibration.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
