[project]
name = "pgm-energy-calibration"
dynamic = ["version"]
description = "A program to calibrate PGM energy"
readme = "README.md"
# readme.content.type = "text/markdown"
authors = [
    { name = "Simone Vadilonga", email = "simone.vadilonga@helmholtz-berlin.de" },
    { name="Ruslan Ovsyannikov", email="ruslan.ovsyannikov@helmholtz-berlin.de" },
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
            'numpy',
            'pandas',
            'tabulate',
            'pytz',
            'lmfit',
            'matplotlib',
          ]

[project.scripts]
mcalibrate = "pgm_energy_calibration.gui:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
